# oman-allowance-app

./: .gitignore  README.md  REQUIREMENTS.md  STARTUP_GUIDE.md  USER_GUIDE.md  build_windows.bat  pyproject.toml  run_gui.py  setup.cfg
.local/local/lib/python3.10/dist-packages/fastapi-0.128.0.dist-info/: RECORD
.local/local/lib/python3.10/dist-packages/uvicorn-0.40.0.dist-info/: RECORD
demo/: demo_students.csv
examples/: example_usage.py
src/oma/: __init__.py  calculations.py  config.py  export.py  models.py  reporting.py  schema.py  utils.py
src/oma/gui/: app.py  exporter.py  i18n.py  settings.py  settlement.py
src/oma/gui_web/: __main__.py  app.py
src/oma/gui_web/assets/: app.js  index.html  styles.css
src/oma/i18n/: en_US.json  zh_CN.json
src/oma/storage/: __init__.py  backup.py  db.py  paths.py
src/oma/web/: __main__.py  app.py  db.py
src/oma/web/i18n/: en_US.json  zh_CN.json
src/oma/web/templates/: base.html  config.html  dashboard.html  reports.html  student_detail.html  students.html  students_import.html
src/oma_allowance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_calculations.py  test_export_excel.py  test_gui_settlement.py  test_storage_baggage.py  test_web.py
