[metadata]
name = oma-allowance
version = 0.1.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.extras_require]
web =
    fastapi>=0.110
    uvicorn>=0.24
    jinja2>=3.1
    python-multipart>=0.0.9
test =
    requests>=2.31
